@@ -1,3 +1,6 @@
+20121020 - fhabermann
+* added knowledgeroot_date object to content und page class
+
 20121019 - fhabermann
 * added new class Knowledgeroot_Date for datetime handling
 
